turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
		rule(state,i) match {
                    ^Turmite:31: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,0,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:32: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:33: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,1,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:34: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:36: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,2,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:37: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:40: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,4,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:41: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:45: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,8,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:46: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^